--- a/src/app/task-form/task-form.component.html
+++ b/src/app/task-form/task-form.component.html
@@ -1,5 +1,7 @@
 <p>task-form works!</p>
 <form action="">
     <input class="form-control" type="text" name="newTask" id="newTask" [(ngModel)]="newTask">
+    <!-- <button class="btn btn-outline-primary my-3"type="submit" (click)="addtodo()">Add task</button> -->
     <button class="btn btn-outline-primary my-3"type="submit" (click)="addtodo()">Add task</button>
+
 </form>
