--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -7,6 +7,8 @@
     <li class="d-flex my-3 px-2 py-2" *ngFor="let task of tasks | filterPipe:searchText;let i=index ">
     {{task}}  
       <button class="btn btn-outline-danger" (click)="removeTask(i)">Delete</button>
+      <!-- <button class="btn btn-outline-danger" (click)="removeTask(i)">Delete</button> -->
+
     </li>
     
   </ul>
